--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,18 +1,130 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Grocery List</title>
-        <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="{% static '/css/styles.css' %}">
-    </head>
-    <body>
-        {%include 'navbar.html' %}
-        {% block content %}
-            
-        {% endblock %}
-    </body>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LAN Messenger</title>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href='/static/css/styles.css'>
+</head>
+
+<body>
+    <style>
+        * {
+            font-family: 'IBM Plex Sans', sans-serif;
+        }
+
+        body {
+            width: 90%;
+            margin: auto;
+        }
+
+        #nav {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+        }
+
+        #nav a {
+            font-size: 20px;
+            color: black;
+            margin: 10px;
+            border-bottom: 2px solid transparent;
+            text-decoration: none;
+        }
+
+        #nav a:hover {
+            border-bottom: 2px solid black;
+        }
+
+        #items {
+            overflow-x: hidden;
+            width: 100%;
+        }
+
+        th {
+            text-align: left;
+        }
+
+        td,
+        th {
+            overflow-wrap: anywhere;
+        }
+
+        button a {
+            color: black;
+            text-decoration: none;
+        }
+
+        #messages {
+            height: 500px;
+            overflow-y: scroll;
+            width: fit-content;
+        }
+
+        .message {
+            margin-top: 10px;
+            margin-bottom: 10px;
+            padding-top: 10px;
+            padding-bottom: 10px;
+            padding-left: 20px;
+            padding-right: 20px;
+            background-color: lightgray;
+            border-radius: 10px;
+            max-width: 500px;
+            overflow-x: wrap;
+            word-wrap: break-word;
+        }
+
+        .message.user {
+            text-align: right;
+            overflow-x: wrap;
+            background-color: white;
+            border: 2px solid lightgray;
+        }
+
+        .message-user {
+            font-weight: bold;
+            font-size: 12px;
+            margin: 0;
+        }
+
+        .message-text {
+            font-size: 15px;
+            margin: 0;
+        }
+
+        #id_text {
+            width: 530px;
+            height: 30px;
+        }
+
+        /* highlights */
+        ::selection {
+            background: grey;
+            color: black;
+        }
+
+        /* scrollbar */
+        ::-webkit-scrollbar {
+            width: 10px;
+        }
+
+        ::-webkit-scrollbar-thumb {
+            background: lightgray;
+        }
+
+        ::-webkit-scrollbar-thumb:hover {
+            background: gray;
+        }
+    </style>
+    {%include 'navbar.html' %}
+    {% block content %}
+
+    {% endblock %}
+</body>
+
 </html>
